--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -34,5 +34,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: /news, roles: ROLE_USER }
+        - { path: ^/news/[0-9]+/edit$, role: ROLE_ADMIN }
+        - { path: ^/news/create, roles: ROLE_ADMIN }
+        - { path: ^/news, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
