--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/orm": "^2.9",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/apache-pack": "^1.0",
+        "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
         "symfony/flex": "^1.3.1",
@@ -26,6 +27,7 @@
         "symfony/security-http": "5.3.*",
         "symfony/twig-bundle": "5.3.*",
         "symfony/validator": "5.3.*",
+        "symfony/web-profiler-bundle": "5.3.*",
         "symfony/yaml": "5.3.*"
     },
     "require-dev": {
